--- a/index.html
+++ b/index.html
@@ -15,82 +15,108 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#my-work">My Work</a>
-                    </li>
-                    <li>
                         <a href="#about-me">About Me</a>
                     </li>
+
+                    <li>
+                        <a href="#my-work">My Work</a>
+                    </li>
+                    
                     <li>
                         <a href="#contact-me"> Contact Me</a>
                     </li>
                 </ul>
             </nav>
         </header>
-        <section id="my-work">
-            <div class="flex-row">
-                <h2 class="section-title primary-border">My Work</h2>
-            </div>
-            <div class="works">
-            <article class="work">
-                <img class="work-img" src="assets/images/website-img-1.png" alt="Start build habits today with Sign Up form">
-                <div class="work-info">
-                    <h3 class="work-title">Run Buddy Landing Page</h3>
-                    <p class="work-text">Run Buddy is a website that offers fitness training services.The landing page is currently in Version 2.0 and is mobile friendly. It's bring in the company more business. </p>
-                </div>
-            </article>
-
-            <article class="work">
-                <img class="work-img" src="assets/images/wensite-img-2.png" alt="Horiseon Website with four young people working in a conference room">
-                <div class="work-info">
-                    <h3 class="work-title">Horiseon Code Refactor</h3>
-                    <p class="work-text">Horiseon is an SEO optimization and online marketing firm. I have refacotered the site to increase accessibility and improve SEO. </p>
-                </div>
-            </article>
-
-            <article class="work">
-                <img class="work-img" src="assets/images/website-img-3.jpeg" alt="placeholder">
-                <div class="work-info">
-                    <h3 class="work-title">Placeholder</h3>
-                    <p class="work-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda at necessitatibus totam culpa suscipit, accusamus dolor unde quisquam obcaecati tempore? Accusamus a fuga et culpa laborum possimus nihil quidem similique. </p>
-                </div>
-            </article>
-
-            <article class="work">
-                <img class="work-img" src="assets/images/website-img-4.jpg" alt="placeholder">
-                <div class="work-info">
-                    <h3 class="work-title">Placeholder</h3>
-                    <p class="work-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda at necessitatibus totam culpa suscipit, accusamus dolor unde quisquam obcaecati tempore? Accusamus a fuga et culpa laborum possimus nihil quidem similique. </p>
-                </div>
-            </article>
-
-            <article  class="work">
-                <img class="work-img" src="assets/images/website-img-5.jpg" alt="placeholder">
-                <div class="work-info">
-                    <h3 class="work-title">Placeholder</h3>
-                    <p class="work-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda at necessitatibus totam culpa suscipit, accusamus dolor unde quisquam obcaecati tempore? Accusamus a fuga et culpa laborum possimus nihil quidem similique. </p>
-                </div>
-            </article>
-
-            <article class="work">
-                <img class="work-img" src="assets/images/website-img-6.jpg" alt="placeholder">
-                <div class="work-info">
-                    <h3 class="work-title">Placeholder</h3>
-                    <p class="work-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda at necessitatibus totam culpa suscipit, accusamus dolor unde quisquam obcaecati tempore? Accusamus a fuga et culpa laborum possimus nihil quidem similique. </p>
-                </div>
-            </article>
-        </div>
-        </section>
         <section id="about-me" class="about">
+            <div class="side">
             <h2 class="section-title primary-border">About Me</h2>
-            <p>Hi I am Grace! I am a data manager at Columbia University and (soon to become) a full-stack developer. In my spare time, I teach my children cello and violin. 
+        </div>
+            <p>Hi, I am Grace! I am the Director of Research Data Operations in the Department of Psychiatry at Columbia University and (soon to become) a full-stack developer. I provide comprehensive data services to researchers and I am hoping my knowledge as a developer brings more flexibility and customizations to my data solutions. 
+            <br/>
+            In my spare time, I play the cello with my children. Our favorite pieces are Bach's Six Cello Suites.
             </p>
         </section>
-        <section id="contact-me" class="contact">
+
+        <section id="my-work" class="my-work-section">
+            <aside class="side">
+                <h2 class="section-title primary-border">My Work</h2>
+            </aside>
+            <div class="works">
+             <div class="work-layout">   
+                <div class="first-works">
+                    <article class="first-work">
+                        <a href="https://mavisyupyup1.github.io/run-buddy/" target="_blank"><img class="work-img" src="assets/images/website-img-1.png" alt="Start build habits today with Sign Up form"></a>
+                        <div class="work-info">
+                            <h3 class="work-title">Run Buddy Landing Page</h3>
+                            <p class="work-text">Run Buddy is a website that offers fitness training services.The landing page is currently in Version 2.0 and is mobile friendly. It's bring in the company more business. </p>
+                        </div>
+                    </article>
+                </div>  
+                <div class="not-first-works">
+                    <article class="work">
+                        <p><a href="https://mavisyupyup1.github.io/SEO-optimization/" target="_blank"> <img class="work-img" src="assets/images/wensite-img-2.png" alt="Horiseon Website with four young people working in a conference room">
+                        </a></p>
+                        <div class="work-info">
+                            <h3 class="work-title">Horiseon Code Refactor</h3>
+                            <p class="work-text">Horiseon is an SEO optimization and online marketing firm. I have refacotered the site to increase accessibility and improve SEO. </p>
+                        </div>
+                    </article>
+
+                    <article class="work">
+                        <img class="work-img" src="assets/images/website-img-3.jpeg" alt="placeholder">
+                        <div class="work-info">
+                            <h3 class="work-title">Placeholder</h3>
+                            <p class="work-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda at necessitatibus totam culpa suscipit, accusamus dolor unde quisquam obcaecati tempore? Accusamus a fuga et culpa laborum possimus nihil quidem similique. </p>
+                        </div>
+                    </article>
+
+                    <article class="work">
+                        <img class="work-img" src="assets/images/website-img-4.jpg" alt="placeholder">
+                        <div class="work-info">
+                            <h3 class="work-title">Placeholder</h3>
+                            <p class="work-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda at necessitatibus totam culpa suscipit, accusamus dolor unde quisquam obcaecati tempore? Accusamus a fuga et culpa laborum possimus nihil quidem similique. </p>
+                        </div>
+                    </article>
+
+                    <article  class="work">
+                        <img class="work-img" src="assets/images/website-img-5.jpg" alt="placeholder">
+                        <div class="work-info">
+                            <h3 class="work-title">Placeholder</h3>
+                            <p class="work-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda at necessitatibus totam culpa suscipit, accusamus dolor unde quisquam obcaecati tempore? Accusamus a fuga et culpa laborum possimus nihil quidem similique. </p>
+                        </div>
+                    </article>
+
+                    <article class="work">
+                        <img class="work-img" src="assets/images/website-img-6.jpg" alt="placeholder">
+                        <div class="work-info">
+                            <h3 class="work-title">Placeholder</h3>
+                            <p class="work-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda at necessitatibus totam culpa suscipit, accusamus dolor unde quisquam obcaecati tempore? Accusamus a fuga et culpa laborum possimus nihil quidem similique. </p>
+                        </div>
+                    </article>
+
+                    <article class="work">
+                        <img class="work-img" src="assets/images/website-img-7.jpg" alt="placeholder">
+                        <div class="work-info">
+                            <h3 class="work-title">Placeholder</h3>
+                            <p class="work-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda at necessitatibus totam culpa suscipit, accusamus dolor unde quisquam obcaecati tempore? Accusamus a fuga et culpa laborum possimus nihil quidem similique. </p>
+                        </div>
+                    </article>
+
+                </div>
+            </div>
+            </div>
+        </section>
+
+        <section id="contact-me" class="contacts">
+            <div class="side">
             <h2 class="section-title primary-border">Contact Me</h2>
+            </div>
+        <div class="contact">
             <div class="contact-info">
                 <h3>Grace Liu</h3>
                 <address>
-                    E:<a href="mailto:mavisyupyup1@github.com">mavisyupyup1@github.com</a>
+                    E: <a href="mailto:gliu42@gmail.com">gliu42@gmail.com</a>
                 </address>
             </div>
             <div class="contact-form">
@@ -98,12 +124,12 @@
                 <form>
                     <label for="contact-name">Your Name</label>
                     <input type="text" id="contact-name" placeholder="Your Name" />
-
                     <label for="contact-message">Message</label>
                     <textarea id="contact-message" placeholder="Message"></textarea>
                     <button type="submit">Submit</button>
                 </form>
             </div>
+        </div>
         </section>
                 <footer>
                     <h2>❤️ Made with love by Grace Liu</h2>
