--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
             <div class="side">
             <h2 class="section-title primary-border">About Me</h2>
         </div>
-            <p>Hi, I am Grace! I am the Director of Research Data Operations in the Department of Psychiatry at Columbia University and (soon to become) a full-stack developer. I provide comprehensive data services to researchers and I am hoping my knowledge as a developer brings more flexibility and customizations to my data solutions. 
-            <br/>
-            In my spare time, I play the cello with my children. Our favorite pieces are Bach's Six Cello Suites.
+            <p>Hi, I am Grace! I am the Director of Research Data Operations in the Department of Psychiatry at Columbia University and (soon to become) a full-stack developer. I provide comprehensive data services to researchers and I am hoping my knowledge as a developer brings more flexibilities and customizations to my data solutions. In my spare time, I enjoying baking bread and playing cello with my children. Our favorite pieces are <a class="link" href="https://www.youtube.com/watch?v=1prweT95Mo0" target="_blank">Bach's Cello Suites</a>. My favorite recipe is the <a class="link" href="https://veenaazmanov.com/pullman-sandwich-bread-pain-de-mie/" target="_blank">Pullman Sandwich Bread</a>.
             </p>
         </section>
 
@@ -132,7 +130,7 @@
         </div>
         </section>
                 <footer>
-                    <h2>❤️ Made with love by Grace Liu</h2>
+                    <h2>❤️ Made with dedication and commitment by Grace Liu</h2>
                     <div>
                         &copy; 2021 Grace Liu
                     </div>
