add meta name=description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Grace Liu's Portfolio page where you can find a collection of my works. ">
         <link rel="stylesheet" href="assets/css/style.css" />
         <title>Grace Liu / Portfolio </title>
     </head>
