added banner and subtitle

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <div class="intro">
             <img src="./assets/images/image-1.PNG" alt="Grace Liu Portrait">
-            <h1>Grace Liu</h1>
+            <h1>Grace Liu | Portfolio</h1>
             </div>
             <nav>
                 <ul>
@@ -29,7 +29,9 @@
                 </ul>
             </nav>
         </header>
-       
+       <section class="banner">
+           <h2>Full Stack | Full Steam</h2>
+       </section>
         <section id="about-me" class="about">
             <div class="side">
             <h2 class="section-title primary-border">About Me</h2>
