--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                 </ul>
             </nav>
         </header>
-       
+       <section class="banner">
+           <img src="/assets/images/banner-2.jpg"/>
+       </section>
         <section id="about-me" class="about">
             <div class="side">
             <h2 class="section-title primary-border">About Me</h2>
