add robot gladiator

--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
                     <article class="first-work">
                         <a href="https://mavisyupyup1.github.io/run-buddy/" target="_blank"><img class="work-img" src="assets/images/website-img-1.png" alt="Start build habits today with Sign Up form"></a>
                         <div class="work-info">
-                            <h3 class="work-title">Run Buddy Landing Page<br/> HTML/CSS</h3>
-                            <h4 class="work-title">HTML/CSS</h4>
+                            <h3 class="work-title">Run Buddy Landing Page <br/>HTML/CSS</h3>
                         </div>
                     </article>
                 </div>  
@@ -65,9 +64,9 @@
                     </article>
 
                     <article class="work">
-                        <img class="work-img" src="assets/images/website-img-3.jpeg" alt="placeholder">
+                        <a href="https://mavisyupyup1.github.io/robot-gladiators/" target="_blank"><img class="work-img" src="assets/images/website-img-3.png" alt="placeholder"></a>
                         <div class="work-info">
-                            <h3 class="work-title">Placeholder<br/>lorem</h3>
+                            <h3 class="work-title">Robot Gladiators<br/>HTML/JS</h3>
                         </div>
                     </article>
 
