--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                 </div>  
                 <div class="not-first-works">
                     <article class="work">
-                        <p><a href="https://mavisyupyup1.github.io/SEO-optimization/" target="_blank"> <img class="work-img" src="assets/images/wensite-img-2.png" alt="Horiseon Website with four young people working in a conference room">
+                        <p><a href="https://mavisyupyup1.github.io/project-01-send-a-joke/" target="_blank"> <img class="work-img" src="assets/images/website-img-2.png" alt="A beautiful cat">
                         </a></p>
                         <div class="work-info">
-                            <h3 class="work-title">Horiseon Code Refactor<br/>HTML/CSS</h3>
+                            <h3 class="work-title">Send A Joke<br/>HTML/CSS/JS/MaterializeCSS</h3>
                         </div>
                     </article>
 
