adding project 2 to portolio

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                     </article>
 
                     <article class="work">
-                        <img class="work-img" src="assets/images/website-img-4.jpg" alt="placeholder">
+                        <a href="https://enigmatic-fjord-07638.herokuapp.com/" target="_blank"><img class="work-img" src="assets/images/website-img-4.png" alt="images with muscle groups"></a>
                         <div class="work-info">
-                            <h3 class="work-title">Placeholder<br/>lorem</h3>
+                            <h3 class="work-title">Node.js/Express.js<br/>MySQl/Handlebars</h3>
                             
                         </div>
                     </article>
